--- a/app/views/diary_entries/_form.html.erb
+++ b/app/views/diary_entries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @diary_entry, local: true) do |form| %>
+<%= form_with(model: @diary_entry, local: true, multipart: true) do |form| %>
 
   <% if @diary_entry.errors.any? %>
     <div class="notification is-danger">
@@ -111,7 +111,11 @@
 
   <div class="field">
     <div class="control">
-      <%= form.submit class: "button is-primary" %>
+      <% if @diary_entry.persisted? %>
+        <%= form.submit "Update Entry", class: "button is-primary", data: { "turbo-submits-with" => "Updating..." } %>
+      <% else %>
+        <%= form.submit "Create Entry", class: "button is-primary", data: { "turbo-submits-with" => "Creating..." } %>
+      <% end %>
     </div>
   </div>
 <% end %>
