--- a/app/views/diary_entries/index.html.erb
+++ b/app/views/diary_entries/index.html.erb
@@ -100,7 +100,13 @@
               </span>
             </div>
             <% diary_entry.images.first(3).each do |image| %>
-              <%= image_tag url_for(image), class: "image is-inline-block mr-1", style: "width: 50px; height: 50px; object-fit: cover; border-radius: 4px; border: 2px solid #dbdbdb;" %>
+              <% begin %>
+                <%= image_tag image.variant(:thumb), class: "image is-inline-block mr-1", style: "width: 50px; height: 50px; object-fit: cover; border-radius: 4px; border: 2px solid #dbdbdb;", loading: "lazy" %>
+              <% rescue => e %>
+                <div class="image is-inline-block mr-1" style="width: 50px; height: 50px; background: #ffebee; border-radius: 4px; border: 2px solid #dbdbdb; display: flex; align-items: center; justify-content: center;">
+                  <i class="fas fa-exclamation-triangle has-text-danger" style="font-size: 12px;"></i>
+                </div>
+              <% end %>
             <% end %>
             <% if diary_entry.images.count > 3 %>
               <span class="tag is-light is-small">+<%= diary_entry.images.count - 3 %> more</span>
