cleaned file tree ready for upload to flyio

--- a/app/views/diary_entries/_diary_entry.html.erb
+++ b/app/views/diary_entries/_diary_entry.html.erb
@@ -1,3 +1,4 @@
+<div class "container">
 <div id="<%= dom_id diary_entry %>" class="card mb-4">
   <div class="card-content">
     <div class="content">
@@ -13,3 +14,5 @@
     </div>
   </div>
 </div>
+</div>
+
