--- a/app/views/diary_entries/_form.html.erb
+++ b/app/views/diary_entries/_form.html.erb
@@ -28,7 +28,7 @@
   <div class="field">
     <%= form.label :content, "Diary Entry Content", class: "label" %>
     <div class="control">
-      <%= form.rich_text_area :content, class: "rich-text-area", data: { behavior: "content-placeholder" } %>
+      <%= form.rich_text_area :content, class: "rich-text-area", placeholder: "Write your diary entry here...", data: { behavior: "content-placeholder" } %>
     </div>
     <p class="help">Write your diary entry here...</p>
   </div>
