--- a/app/views/diary_entries/new.html.erb
+++ b/app/views/diary_entries/new.html.erb
@@ -1,3 +1,4 @@
+<div class"container"></div>
 <% if @thought_of_the_day %>
   <div class="notification is-info is-light">
     <strong>Thought of the Day:</strong><br>
@@ -15,6 +16,7 @@
 
 <br>
 
-<div>
+  <div>
   <%= link_to "Back to diary entries", diary_entries_path %>
+  </div>
 </div>
