--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="hero is-light">
   <div class="hero-body">
     <div class="container">
@@ -263,3 +264,5 @@
     </div>
   </div>
 </section>
+</div>
+</div>
