--- a/app/views/subscriptions/pricing.html.erb
+++ b/app/views/subscriptions/pricing.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="hero is-primary is-medium">
   <div class="hero-body">
     <div class="container has-text-centered">
@@ -210,3 +211,4 @@
     </div>
   </div>
 </section>
+</div>
