--- a/app/views/diary_entries/show.html.erb
+++ b/app/views/diary_entries/show.html.erb
@@ -17,12 +17,12 @@
   </div>
 <% end %>
 
-<%= render @diary_entry %>
+<%= render partial: "diary_entries/diary_entry", locals: { diary_entry: @diary_entry } %>
 
 <% if @diary_entry.content.present? %>
   <div class="box mb-4">
     <h2 class="subtitle">Content</h2>
-    <%= @diary_entry.content.body.to_s.html_safe %>
+  <%= @diary_entry.content.body.to_html.html_safe %>
   </div>
 <% end %>
 
