--- a/app/views/diary_entries/show.html.erb
+++ b/app/views/diary_entries/show.html.erb
@@ -22,7 +22,7 @@
 <% if @diary_entry.content.present? %>
   <div class="box mb-4">
     <h2 class="subtitle">Content</h2>
-  <%= @diary_entry.content.body.to_html.html_safe %>
+  <%= @diary_entry.content.body.to_html %>
   </div>
 <% end %>
 
