--- a/app/views/diary_entries/_diary_entry.html.erb
+++ b/app/views/diary_entries/_diary_entry.html.erb
@@ -11,6 +11,10 @@
       <p>
         <strong>Status:</strong> <%= diary_entry.status %>
       </p>
+      <div class="buttons mt-3">
+        <%= link_to "Edit", edit_diary_entry_path(diary_entry), class: "button is-warning is-light" %>
+        <%= link_to "Delete", diary_entry_path(diary_entry), method: :delete, data: { confirm: "Are you sure you want to delete this entry?" }, class: "button is-danger is-light" %>
+      </div>
     </div>
   </div>
 </div>
