--- a/app/views/thoughts/index.html.erb
+++ b/app/views/thoughts/index.html.erb
@@ -1,16 +1,25 @@
-<p style="color: green"><%= notice %></p>
 
 <% content_for :title, "Thoughts" %>
 
 <h1>Thoughts</h1>
 
-<div id="thoughts">
-  <% @thoughts.each do |thought| %>
-    <%= render thought %>
-    <p>
-      <%= link_to "Show this thought", thought %>
-    </p>
-  <% end %>
-</div>
+<% if @thoughts.any? %>
+  <ul>
+    <% @thoughts.each do |thought| %>
+      <li class="box mb-3">
+        <strong><%= thought.content %></strong>
+        <% if thought.mood.present? %>
+          <span style="color: #888;">(<%= thought.mood %>)</span>
+        <% end %>
+        <div class="buttons mt-2">
+          <%= link_to "Edit", edit_thought_path(thought), class: "button is-warning is-light is-small" %>
+          <%= link_to "Delete", thought_path(thought), method: :delete, data: { confirm: "Are you sure you want to delete this thought/mood?" }, class: "button is-danger is-light is-small" %>
+        </div>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>No thoughts found.</p>
+<% end %>
 
-<%= link_to "New thought", new_thought_path %>
+<%= link_to "Add a new Thought/Mood", new_thought_path, class: "button is-link is-small mt-4" %>
